支持 activity 导常 kill 后数据恢复

--- a/app/src/main/res/layout/fragment_take.xml
+++ b/app/src/main/res/layout/fragment_take.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mylhyl.takephoto.sample.FragmentMainActivity">
+    android:background="@android:color/white"
+    tools:context="com.mylhyl.takephoto.sample.TakeFragment">
 
     <Button
         android:id="@+id/button3"
@@ -37,13 +38,4 @@
         </LinearLayout>
     </ScrollView>
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="Crash"
-        android:textAllCaps="false" />
 </RelativeLayout>
